# libsignal-rs

./: .gitignore  .npmignore  README.md  index.js  package-lock.json  package.json
.github/workflows/: release.yml
protos/: WhisperTextProtocol.proto
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/libsignal/: address.rs  curve.rs  e164.rs  mod.rs
rust/src/libsignal/curve/: curve25519.rs  utils.rs
scripts/: build-native.js  build-native.sh  install-if-needed.js  postinstall.js  preinstall.js
src/: curve.js  group_cipher.js  group_session_builder.js  hkdf.js  hkdfv2.js  hkdfv3.js  keyhelper.js  protobufs.js  protocol_address.js  queue_job.js  sender_chain_key.js  sender_key_message.js  sender_key_name.js  sender_message_key.js  session_builder.js  session_cipher.js  session_record.js
