[package]
name = "libsignal_rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.5"
napi-derive = "3.3"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
ed25519-dalek = "2.2.0"
hmac = { version = "0.12.1", features = ["reset"] }
sha2 = "0.10.6"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
openssl = "0.10.75"
rand = "0.9.2"

[build-dependencies]
napi-build = "2"
