[package]
name = "libsignal_rs"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
derive_more = { version = "2.0.0",  features = ["from", "into", "try_from"]}
displaydoc = "0.2.5"
napi = "3.5"
napi-derive = "3.3"
rand = "0.9.2"
subtle = "2.6"
sha2 = "0.10"
uuid = "1.5"
log = "0.4.21"
thiserror = "2.0.11"


[build-dependencies]
napi-build = "2"
